# flipcash-program

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md
api/: Cargo.toml
api/src/: consts.rs  cpis.rs  curve.rs  curve2.rs  event.rs  instruction.rs  lib.rs  pda.rs  sdk.rs  state.rs  utils.rs
api/src/math/: consts.rs  curve.rs  exp.rs  log.rs  mod.rs  precise_number.rs  signed.rs  uint.rs  unsigned.rs
api/src/state/: currency.rs  mod.rs  pool.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: consts.rs  lib.rs
client/src/program/: burn.rs  buy.rs  init.rs  mod.rs  sell.rs
client/src/utils/: account.rs  ata.rs  mint.rs  mod.rs  rpc.rs
idl/: Makefile  flipcash.json  flipcash_api.json
idl/src/: Anchor.toml  Cargo.toml  package.json
idl/src/programs/flipcash/: Cargo.toml
idl/src/programs/flipcash/src/: args.rs  consts.rs  instructions.rs  lib.rs  state.rs  types.rs
idl/src/scripts/: update-discriminators.ts
program/: Cargo.toml
program/src/: lib.rs  security.rs
program/src/instruction/: burn.rs  buy.rs  currency.rs  metadata.rs  mod.rs  pool.rs  sell.rs
program/tests/: integration.rs
program/tests/utils/: mod.rs  print.rs  svm.rs  token.rs
