[workspace]
members = ["api", "program"]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true

[workspace.dependencies]
anyhow = "1.0"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "=2.1"
solana-program = "=2.1"
solana-sdk = "=2.1.0"
solana-transaction-status = "=2.1"
spl-token = { features = ["no-entrypoint"], version = "^4" }
spl-associated-token-account = { features = ["no-entrypoint"], version = "^6" }
steel = { git = "https://github.com/regolith-labs/steel", rev = "3f6b36b", features = ["spl"] }

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
chrono = "0.4"

# client-specific
flate2 = "1.0"
sha2 = "0.10.8"

# program-specific
litesvm = "0.5.0"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
