[workspace]
members = ["api", "program", "client", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://flipcash.com"
description = "Flipcash is a Solana-based wallet app"
repository = "https://github.com/code-payments/flipcash-program/"
readme = "./README.md"
keywords = ["solana", "crypto", "wallet"]

[workspace.dependencies]
flipcash-api = { version = "0.1.0", path = "./api" }
flipcash-client = { version = "0.1.0", path = "./client" }

anyhow = "1.0"
brine-fp = "0.1.0"
mpl-token-metadata = "5.1"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "=2.1"
solana-program = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"
solana-transaction-status-client-types = "=2.1"
solana-account-decoder = "=2.1"
spl-associated-token-account = { features = ["no-entrypoint"], version = "^6" }
spl-token = { features = ["no-entrypoint"], version = "^4" }
steel = { version="4.0.0", features = ["spl"] }
uint = "0.8"

# client-specific
bincode = "1.3"
base64 = "0.13"
rand = "0.8"

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
chrono = "0.4"
indicatif = "0.17"
console = "0.15"

# client-specific
flate2 = "1.0"
sha2 = "0.10.8"

# program-specific
litesvm = "0.5.0"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"

[patch.crates-io]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
