[package]
name = "flipcash-api"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/flipcash-api"

[dependencies]
solana-program.workspace = true
bytemuck.workspace = true
steel.workspace = true
num_enum.workspace = true
spl-token.workspace = true
uint.workspace = true
brine-fp.workspace = true
mpl-token-metadata.workspace = true
shank = "0.4.2"

[dev-dependencies]
solana-sdk = "2.1.0"
