[package]
name = "flipcash-cli"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

documentation = "https://docs.rs/flipcash-cli"

[[bin]]
name = "flipcash"
path = "src/main.rs"

[dependencies]
flipcash-api.workspace = true
flipcash-client.workspace = true

anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
clap.workspace = true
colored.workspace = true
dialoguer.workspace = true
dirs.workspace = true
tokio.workspace = true
indicatif.workspace = true
console.workspace = true

solana-client.workspace = true
solana-sdk.workspace = true
