[package]
name = "flipcash-client"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/flipcash-client"

[dependencies]
flipcash-api.workspace = true

anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
brine-fp.workspace = true
bytemuck.workspace = true
chrono.workspace = true
flate2.workspace = true
mpl-token-metadata.workspace = true
num_enum.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true
tokio.workspace = true
uint.workspace = true

solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status-client-types.workspace = true
