[package]
name = "flipcash-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []

[dependencies]
flipcash-api = { path = "../api", version = "0.1.0" }
solana-program.workspace = true
steel.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
bytemuck.workspace = true

# Fix for issues with `build-sbf` rustc being on `1.79-dev`
bytemuck_derive=">=1.8.1, <1.9.0"
half = "=2.4.1"

[dev-dependencies]
litesvm = "0.5.0"
litesvm-token = "0.5.0"
solana-sdk = "2.1.0"
pretty-hex = "0.4.1"
rand = "0.8.5"
