[package]
name = "flipcash"
version = "1.0.0"
description = "Flipcash Currency Creator Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipcash"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
