[package]
name = "flipcash-idl"
version = "1.0.0"
description = "The Reserve Contract for the Flipcash Currency Creator Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipcash_idl"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
indexmap.workspace = true
